# ToxicDatabase

./: README.md  RULES.md  VideoPerformerSetup.7z
ATM Malware/: ATM and EMV  Banker.TinyBanker_4292fd1e4dc085b603185752e948cf60.7z  Trojan.ZBot_17ecac1cff614d829c3175840b486ba0.7z
Adware/: 24x7help.7z  4Shared.7z  66e7fc6131f5ccda47ce44ce_kudifosefozo.7z  66eff1749fcc1c59482cc595_1428835357.7z  67206033746876a86fcf0b0e_61190934873.7z  672327232a2b5a0da729714a_62573688605.7z  AOL_Netscape.7z  AVG Secure Search.7z  AdWare.GoodPic_1aeb89a3cab3c8aeb475138ddd5d58f0.7z  AdWare.LoadMoney_18fb3c45e85ce0e3f9112ffa214c94a0.7z  AdWare.iBryte_1c35b4b2955d6d68f8cf1969cda338c0.7z  AdWare_4b1aee0f8de8b4638102a9ea9bf92b44ea5287211bfe89d161134c6c652da045.7z  Advanced Cleaner.7z  Akick_PC_Optimizer.7z  Alexa Toolbar.7z  Altavista Toolbar.7z  AmazonToolbar.7z  Arcade Giant.7z  ArchSMS_403852a2616f5c45376ca10db73c234d151a89031e5c5a1920e738aca342b95d.7z  Ask Jeeves.7z  Ask Toolbar.7z  BCleaner.7z  Babylon.7z  Baixaki_Adobe Flash Player_v3.524.17.862.1.7z  BroomCleanerSetup.7z  ByteFence Secure Browsing.7z  CCleaner Opencandy.7z  CTBrowserSetup_IBhBtq58e5.7z  Capuson.7z  Chedot.7z  Chistilka_id65d1929b86a6cch.7z  Chrome-Setup.7z  Chromstera.7z  (+176 more)
Source codes/ShoeBill Src/: BSOD.cpp  CMakeLists.txt  CloseProc.cpp  Common.hpp  Effect.cpp  MainWindow.cpp  main.cpp
Source codes/ShoeBill Src/Resource/: resource.h  resource.rc
Source codes/Win32.Fart/: CMakeLists.txt
Source codes/Win32.Fart/Resource/: resource.h  resource.rc
Source codes/Win32.Fart/src/: Common.hpp  Volume.cpp  main.cpp
(+3016 files in other folders)
